# furgbol-rx

./: .gitignore  .gitmodules  CMakeLists.txt
ext/ssl_proto/: CMakeLists.txt
ext/ssl_proto/include/grSim/: grSim_Commands.pb.h  grSim_Packet.pb.h  grSim_Replacement.pb.h
ext/ssl_proto/include/refbox/: game_event.pb.h  rcon.pb.h  referee.pb.h  savestate.pb.h
ext/ssl_proto/include/sslvision/: messages_robocup_ssl_detection.pb.h  messages_robocup_ssl_geometry.pb.h  messages_robocup_ssl_refbox_log.pb.h  messages_robocup_ssl_wrapper.pb.h
include/consumers/: websocket_sender.h  websocket_server.h
include/definitions/: definitions.h
include/io/: multicast_receiver.h
include/models/: object.h
include/operations/: operations.h
include/operators/: operators.h
include/serialization/: ssl_detection_aggregator.h  ssl_detection_normalizer.h  ssl_wrapper_parser.h
include/sources/: multicast_receiver.h  sources.h
src/: main.cc
src/consumers/: websocket_sender.cc  websocket_server.cc
src/io/: multicast_receiver.cc
src/operations/: aggregate_cameras.cc  get_detection.cc  get_geometry.cc  merge_cameras.cc  normalize_ball.cc  normalize_robots.cc  parse_referee.cc  parse_wrapper.cc  serialize_to_json.cc
src/operators/: aggregate_cameras.cc  get_detection.cc  get_geometry.cc  normalize_ball.cc  operators.cc  parse_referee.cc  parse_wrapper.cc  serialize_to_json.cc
src/serialization/: ssl_detection_aggregator.cc  ssl_detection_normalizer.cc  ssl_wrapper_parser.cc
src/sources/: multicast_receiver.cc  sources.cc
